@@ -1,4 +1,4 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -17,9 +17,9 @@ KEYWORDS=""
 IUSE=""
 
 DEPEND="
-	>=virtual/jdk-1.7
+	>=virtual/jdk-1.7:*
 	dev-java/ant-core"
 RDEPEND="${DEPEND}
-	>=virtual/jre-1.7"
+	>=virtual/jre-1.7:*"
 
 S="${WORKDIR}"/bbmap
